--- a/IzzatirRofi'ah/Jobsheet12/json/pubspec.yaml
+++ b/IzzatirRofi'ah/Jobsheet12/json/pubspec.yaml
@@ -30,14 +30,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+   
+  json_annotation: ^4.8.1
+  shared_preferences: ^2.2.2
+  path_provider: ^2.1.1
+  path: ^1.8.3
+  encrypt: ^5.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  intl: ^0.20.2
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
