--- a/reza_angelina_febriyanti/jobsheet10/pubspec.yaml
+++ b/reza_angelina_febriyanti/jobsheet10/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   json_annotation: ^4.9.0
 
   cupertino_icons: ^1.0.8
+  intl: ^0.19.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
