--- a/Lovelya_Sekarayu/pertemuan_11json/pubspec.yaml
+++ b/Lovelya_Sekarayu/pertemuan_11json/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  json_annotation: ^4.8.1
   flutter:
     sdk: flutter
 
@@ -36,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
   flutter_test:
     sdk: flutter
 
