--- a/veraefita/project9json/pubspec.yaml
+++ b/veraefita/project9json/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   json_annotation: ^4.9.0
   shared_preferences: ^2.2.2
   intl: ^0.19.0
+  path_provider: ^2.1.1
+  path: ^1.9.0
 # dev_dependencies are dependencies needed for development and testing.
 # They are not included in the package when it is published.  
 dev_dependencies:
