--- a/veraefita/project9json/pubspec.yaml
+++ b/veraefita/project9json/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.19.0
   path_provider: ^2.1.1
   path: ^1.9.0
+  encrypt: ^5.0.1 
 # dev_dependencies are dependencies needed for development and testing.
 # They are not included in the package when it is published.  
 dev_dependencies:
