--- a/Lovelya_Sekarayu/pertemuan_11json/pubspec.yaml
+++ b/Lovelya_Sekarayu/pertemuan_11json/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  encrypt: ^5.0.1
   path_provider: ^2.1.1
   path: ^1.8.3
   json_annotation: ^4.8.1
