--- a/satria_rakhmadani/kuis2/pubspec.yaml
+++ b/satria_rakhmadani/kuis2/pubspec.yaml
@@ -30,6 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  json_annotation: ^4.8.1
+  intl: ^0.19.0 
+  shared_preferences: ^2.2.2 
+  path_provider: ^2.1.1
+  path: ^1.8.3
+  encrypt: ^5.0.1
+  http: ^1.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +45,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
